--- a/index.html
+++ b/index.html
@@ -1,64 +1,64 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Hand Tracking Test</title>
-    <meta name="description" content="Hand Tracking Test">
-    <script src="assets/aframe-master.min.js"></script>
-	<script src="assets/info-message.js"></script>
-    <script src="assets/aframe-environment-component.min.js"></script>
-    <script src="assets/pinchable.js"></script>
-    <script src="assets/color-change.js"></script>
-    <script src="assets/slider.js"></script>
-    <script src="assets/size-change.js"></script>
-    <script src="assets/button.js"></script>
-    <script src="assets/menu.js"></script>
-    <script src="assets/pressable.js"></script>
-    <script src="assets/event-manager.js"></script>
-  </head>
-  <body>
-    <a-scene environment info-message="htmlSrc: #messageText">
-      <a-assets>
-        <a-asset-item id="messageText" src="assets/message.html"></a-asset-item>
-      </a-assets>
-      <a-entity
-        id="boxGeometry"
-        position="0 2.0 -1"
-        rotation="45 45 0"
-        geometry="primitive: box; height: 0.6; width: 0.6; depth: 0.6"
-        material="color: #ff4b5c"
-        size-change
-        scale="0.5 0.5 0.5"
-      ></a-entity>
-       <a-entity
-        id="torusGeometry"
-        position="0 2.0 -1"
-        rotation="45 45 0"
-        geometry="primitive: torus; radius: 0.4; radius-tubular: 0.06"
-        material="color: #d2e603"
-        size-change
-        visible="false"
-        scale="0.5 0.5 0.5"
-      ></a-entity>
-       <a-entity
-        id="sphereGeometry"
-        position="0 2.0 -1"
-        rotation="45 45 0"
-        geometry="primitive: sphere; radius: 0.6;"
-        material="color: #fcdab7"
-        size-change
-        visible="false"
-        scale="0.5 0.5 0.5"
-      ></a-entity>
-      <a-entity id="menu" menu position="0 1.5 -0.5" rotation="-45 0 0" event-manager>
-        <a-entity slider position="0 0.10 0"></a-entity>
-        <a-entity id="sphereButton" button="label: sphere" position="-0.15 0 0"></a-entity>
-        <a-entity id="boxButton" button="label: box" position="0 0 0"></a-entity>
-        <a-entity id="torusButton" button="label: torus" position="0.15 0 0"></a-entity>
-        <a-entity id="darkModeButton" button="label: Dark Mode; width: 0.20; toggleable: true" position="0 -0.10 0"></a-entity>
-      </a-entity>
-      <a-entity hand-tracking-controls="hand: left"></a-entity>
-      <a-entity hand-tracking-controls="hand: right"></a-entity>
-    </a-scene>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Hand Tracking with Smartphone</title>
+  <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js"></script>
+</head>
+<body style="margin:0;">
+
+<!-- A-Frame scene -->
+<a-scene>
+  <a-box id="box" position="0 1.5 -3" color="red"></a-box>
+  <a-sky color="#ECECEC"></a-sky>
+</a-scene>
+
+<!-- Hidden video for camera input -->
+<video id="input_video" style="display:none;"></video>
+
+<script>
+  // Referensi box di A-Frame
+  const boxEl = document.querySelector('#box');
+
+  // MediaPipe Hands
+  const hands = new Hands({
+    locateFile: (file) => {
+      return `https://cdn.jsdelivr.net/npm/@mediapipe/hands/${file}`;
+    }
+  });
+  hands.setOptions({
+    maxNumHands: 1,
+    modelComplexity: 1,
+    minDetectionConfidence: 0.7,
+    minTrackingConfidence: 0.7
+  });
+
+  hands.onResults(results => {
+    if (results.multiHandLandmarks && results.multiHandLandmarks.length > 0) {
+      const hand = results.multiHandLandmarks[0];
+      const wrist = hand[0]; // Titik pergelangan tangan
+
+      // Ubah koordinat [0-1] jadi posisi di A-Frame
+      const x = (wrist.x - 0.5) * 4; // geser dan skala
+      const y = (0.5 - wrist.y) * 3 + 1.5;
+      boxEl.setAttribute('position', `${x} ${y} -3`);
+    }
+  });
+
+  // Akses kamera HP
+  const videoElement = document.getElementById('input_video');
+  const camera = new Camera(videoElement, {
+    onFrame: async () => {
+      await hands.send({ image: videoElement });
+    },
+    width: 640,
+    height: 480
+  });
+  camera.start();
+</script>
+
+</body>
 </html>
