--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </a-scene>
 
 <!-- Hidden video for camera input -->
-<video id="input_video" style="display:none;"></video>
+<video id="input_video" style="display:block;"></video>
 
 <script>
   // Referensi box di A-Frame
@@ -84,6 +84,7 @@ navigator.mediaDevices.getUserMedia({
 
 </body>
 </html>
+
 
 
 
