--- a/index3.html
+++ b/index3.html
@@ -8,14 +8,14 @@
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js"></script>
 </head>
 <body style="margin:0;">
-
+<!-- Bagian pengatura kamera HP -->
 <!-- Pilih kamera -->
 <div style="position:fixed;top:10px;left:10px;z-index:10;background:#fff;padding:5px;">
   <label for="cameraSelect">Pilih Kamera:</label>
   <select id="cameraSelect"></select>
 </div>
 
-<!-- A-Frame scene -->
+<!-- Objek box A-Frame scene -->
 <a-scene>
   <a-box id="box" position="0 1.5 -3" color="red"></a-box>
   <a-sky color="#ECECEC"></a-sky>
